--- a/k8s-manifests/ci.yml
+++ b/k8s-manifests/ci.yml
@@ -1,4 +1,4 @@
-name: Static Site + Flask Backend CI
+name: Flask Web App CI/CD
 
 on:
   push:
@@ -15,105 +15,131 @@ jobs:
         with:
           clean: true
 
-  frontend-check:
+  frontend-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
-      - name: Checkout code
+      - name: Checkout frontend code
         uses: actions/checkout@v4
       
-      - name: HTML and CSS Lint (Optional)
-        uses: Cyb3r-Jak3/htmlhint-action@v1
-        with:
-          files: ./frontend
-
+      - name: Validate HTML & CSS (Optional)
+        run: echo "Static HTML/CSS site - no tests to run"
+        
   backend-test:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./backend
     steps:
-      - name: Checkout code
+      - name: Checkout backend code
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m venv venv
+          source venv/bin/activate
           pip install -r requirements.txt
-          pip install flake8 black bandit pytest
+          flake8 .
+          pytest
+        env:
+          FLASK_ENV: testing
 
-      - name: Code format check (Black)
-        run: black . --check
-
-      - name: Linting (flake8)
-        run: flake8 .
-
-      - name: Security check (Bandit)
-        run: bandit -r .
-
-      - name: Run tests
-        run: pytest
+      - name: Analyze with SonarCloud
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: backend
+          args: >
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.host.url=${{ secrets.SONAR_URL }}
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.sources=.
+            -Dsonar.language=py
+            -Dsonar.verbose=true
 
   backend-security:
     needs: backend-test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Snyk Python Scan
-        uses: snyk/actions/python@master
+      - name: Install Snyk CLI
+        uses: snyk/actions/setup@master
         with:
-          args: --file=requirements.txt --severity-threshold=high
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          snyk-token: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Snyk Authenticate
+        run: snyk auth ${{ secrets.SNYK_TOKEN }}
+
+      - name: Run Snyk for Python vulnerabilities
+        run: snyk test --file=requirements.txt --package-manager=pip
         continue-on-error: true
+
+  frontend-image:
+    runs-on: ubuntu-latest
+    needs: frontend-test
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build and push frontend Docker image
+        working-directory: ./frontend
+        run: |
+          docker build . -t ${{ secrets.DOCKER_USERNAME }}/frontend-static
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker push ${{ secrets.DOCKER_USERNAME }}/frontend-static
+
+      - name: Trivy scan for frontend image
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'docker.io/${{ secrets.DOCKER_USERNAME }}/frontend-static'
+          format: 'sarif'
+          output: 'trivy-frontend.sarif'
+          severity: 'CRITICAL,HIGH'
 
   backend-image:
     needs: backend-security
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Build and push Docker image
+      - name: Build and push backend Docker image
         working-directory: ./backend
         run: |
           docker build . -t ${{ secrets.DOCKER_USERNAME }}/flask-backend
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push ${{ secrets.DOCKER_USERNAME }}/flask-backend
 
-      - name: Scan image with Trivy
+      - name: Trivy scan for backend image
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'docker.io/${{ secrets.DOCKER_USERNAME }}/flask-backend'
           format: 'sarif'
-          output: 'trivy-results.sarif'
+          output: 'trivy-backend.sarif'
           severity: 'CRITICAL,HIGH'
 
-      - name: Snyk Container Scan
-        uses: snyk/actions/docker@master
-        with:
-          image: ${{ secrets.DOCKER_USERNAME }}/flask-backend
-          args: --file=backend/Dockerfile --severity-threshold=high
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        continue-on-error: true
-
   k8s-manifest-scan:
-    needs: [backend-image]
+    needs: [frontend-image, backend-image]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Scan Kubernetes Manifests
+      - name: Snyk Kubernetes IaC Scan
         uses: snyk/actions/iac@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          file: kubernetes-manifest/
+          file: ./k8s-manifests/
           args: --severity-threshold=high
