--- a/k8s-manifests/ingress.yml
+++ b/k8s-manifests/ingress.yml
@@ -4,14 +4,13 @@ metadata:
   name: mylb
   namespace: my-sre
   annotations:
+    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
     alb.ingress.kubernetes.io/target-type: ip
-
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
 spec:
-  ingressClassName: my-sre
   rules:
-    -host: moesportfolio.com
+  - host: moesportfolio.com
     http:
       paths:
       - path: /api
