--- a/.github/workflows /ci.yml
+++ b/.github/workflows /ci.yml
@@ -2,9 +2,9 @@ name: Flask Web App CI/CD
 
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
 
 jobs:
   clean-workspace:
