--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,16 +87,23 @@ jobs:
     needs: frontend-test
     steps:
       - uses: actions/checkout@v4
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build and push frontend Docker image
         working-directory: ./frontend
         run: |
-          docker build . -t mohd1995/sre:latest
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker push mohd1995/sre:latest
+          docker build . -t ${{ secrets.DOCKER_USERNAME }}/sre:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/sre:latest
+
       - name: Trivy scan for frontend image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/mohd1995/sre:latest'
+          image-ref: 'docker.io/${{ secrets.DOCKER_USERNAME }}/sre:latest'
           format: 'sarif'
           output: 'trivy-frontend.sarif'
           severity: 'CRITICAL,HIGH'
@@ -106,16 +113,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build and push backend Docker image
         working-directory: ./backend
         run: |
-          docker build . -t ${{ secrets.DOCKER_USERNAME }}/flask-backend
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker push ${{ secrets.DOCKER_USERNAME }}/flask-backend
+          docker build . -t ${{ secrets.DOCKER_USERNAME }}/flask-backend:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/flask-backend:latest
+
       - name: Trivy scan for backend image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/${{ secrets.DOCKER_USERNAME }}/flask-backend'
+          image-ref: 'docker.io/${{ secrets.DOCKER_USERNAME }}/flask-backend:latest'
           format: 'sarif'
           output: 'trivy-backend.sarif'
           severity: 'CRITICAL,HIGH'
