--- a/k8s-manifests/frontend.yml
+++ b/k8s-manifests/frontend.yml
@@ -27,8 +27,11 @@ spec:
         - name: API_BASE_URL
           value: "http://moesportfolio.com"
         ports:
-        - containerPort: 8080
+          containerPort: 8080
+
+
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
