--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Validate HTML & CSS (Optional)
         run: echo "Static HTML/CSS site - no tests to run"
-##
+
   backend-test:
     runs-on: ubuntu-latest
     defaults:
@@ -54,6 +54,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
+          projectBaseDir: backend
           args: >
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
@@ -62,86 +63,3 @@ jobs:
             -Dsonar.sources=.
             -Dsonar.language=py
             -Dsonar.verbose=true
-###
-  backend-security:
-    needs: backend-test
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install Snyk CLI
-        uses: snyk/actions/setup@master
-        with:
-          snyk-token: ${{ secrets.SNYK_TOKEN }}
-      - name: Snyk Authenticate
-        run: snyk auth ${{ secrets.SNYK_TOKEN }}
-      - name: Run Snyk for Python vulnerabilities
-        run: snyk test --file=requirements.txt --package-manager=pip
-        continue-on-error: true
-
-  frontend-image:
-    runs-on: ubuntu-latest
-    needs: frontend-test
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push frontend Docker image
-        working-directory: ./frontend
-        run: |
-          docker build . -t ${{ secrets.DOCKER_USERNAME }}/sre:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/sre:latest
-
-      - name: Trivy scan for frontend image
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'docker.io/${{ secrets.DOCKER_USERNAME }}/sre:latest'
-          format: 'sarif'
-          output: 'trivy-frontend.sarif'
-          severity: 'CRITICAL,HIGH'
-
-  backend-image:
-    needs: backend-security
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push backend Docker image
-        working-directory: ./backend
-        run: |
-          docker build . -t ${{ secrets.DOCKER_USERNAME }}/flask-backend:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/flask-backend:latest
-
-      - name: Trivy scan for backend image
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'docker.io/${{ secrets.DOCKER_USERNAME }}/flask-backend:latest'
-          format: 'sarif'
-          output: 'trivy-backend.sarif'
-          severity: 'CRITICAL,HIGH'
-
-  k8s-manifest-scan:
-    needs: [frontend-image, backend-image]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Snyk Kubernetes IaC Scan
-        uses: snyk/actions/iac@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          file: ./k8s-manifests/
-          args: --severity-threshold=high
