--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,18 @@ jobs:
         with:
           python-version: '3.13.5'
       - name: Install dependencies and test
+
+      
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pytest
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          pytest
+
+
         env:
           FLASK_ENV: testing
       - name: Analyze with SonarCloud
