--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,10 +45,10 @@ jobs:
           pip install -r requirements.txt
           flake8
           #pytest
-          
+
         env:
           FLASK_ENV: testing
-      - name: Analyze with SonarCloud
+      - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
