--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
           pip install --upgrade pip 
           pip install -r requirements.txt
           flake8
+
           #pytest
 
         env:
@@ -77,11 +78,31 @@ jobs:
         uses: snyk/actions/setup@master
         with:
           snyk-token: ${{ secrets.SNYK_TOKEN }}
+
       - name: Snyk Authenticate
         run: snyk auth ${{ secrets.SNYK_TOKEN }}
+
       - name: Run Snyk for Python vulnerabilities
         run: snyk test --file=requirements.txt --package-manager=pip
         continue-on-error: true
+  
+  frontend-image:
+    runs-on: ubuntu-latest
+    needs: frontend-test
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push frontend Docker image
+        working-directory: ./frontend
+        run: |
+          docker build . -t ${{ secrets.DOCKER_USERNAME }}/sre:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/sre:latest
 
 
           
