--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,20 +89,20 @@ jobs:
   frontend-image:
     runs-on: ubuntu-latest
     needs: frontend-test
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
     steps:
       - uses: actions/checkout@v4
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push frontend Docker image
+      - name: Build and push backend Docker image
         working-directory: ./frontend
         run: |
-          docker build . -t ${{ secrets.DOCKER_USERNAME }}/sre:latest
+          docker build . -t ${{ secrets.DOCKER_USERNAME }}//sre:latest
+          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }}
           docker push ${{ secrets.DOCKER_USERNAME }}/sre:latest
+  
 
 
           
