--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
       - name: Build and push backend Docker image
         working-directory: ./frontend
         run: |
-          docker build . -t ${{ secrets.DOCKER_USERNAME }}//sre:latest
+          docker build . -t ${{ secrets.DOCKER_USERNAME }}/sre:latest
           echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }}
           docker push ${{ secrets.DOCKER_USERNAME }}/sre:latest
   
