--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: Checkout frontend code
         uses: actions/checkout@v4
-      - name: Validate HTML & CSS (Optional)
+      - name: Validate HTML & CSS
         run: echo "Static HTML/CSS site - no tests to run"
 
   backend-test:
@@ -44,7 +44,6 @@ jobs:
           pip install --upgrade pip 
           pip install -r requirements.txt
           flake8
-
           #pytest
 
         env:
@@ -65,8 +64,9 @@ jobs:
             -Dsonar.sources=.
             -Dsonar.language=py
             -Dsonar.verbose=true
+           
 
-  backend-security:
+  frontend-security:
     needs: backend-test
     runs-on: ubuntu-latest
     defaults:
@@ -76,66 +76,20 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Snyk CLI
         uses: snyk/actions/setup@master
-        with:
-          snyk-token: ${{ secrets.SNYK_TOKEN }}
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      
+      - name: Install Snyk CLI
+        uses: snyk/actions/setup@master
 
+      
       - name: Snyk Authenticate
         run: snyk auth ${{ secrets.SNYK_TOKEN }}
 
       - name: Run Snyk for Python vulnerabilities
         run: snyk test --file=requirements.txt --package-manager=pip
         continue-on-error: true
-  
-  frontend-image:
-    runs-on: ubuntu-latest
-    needs: frontend-test
-    permissions:
-      contents: read
-      security-events: write
-      actions: read
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Build and push backend Docker image
-        working-directory: ./frontend
-        run: |
-          docker build . -t ${{ secrets.DOCKER_USERNAME }}/sre:latest
-          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker push ${{ secrets.DOCKER_USERNAME }}/sre:latest
-  
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'docker.io/${{ secrets.DOCKER_USERNAME }}/frontend-js'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
-      
-      - name: Install Snyk CLI
-        uses: snyk/actions/setup@master
-        with:
-          snyk-token: ${{ secrets.SNYK_TOKEN }}
-      
-      - name: Snyk Authenticate
-        run: snyk auth ${{ secrets.SONAR_TOKEN }}
-      
-
-      - name: Snyk Container monitor
-        run: snyk container monitor ${{ secrets.DOCKER_USERNAME }}/sre --file=Dockerfile
-        working-directory: ./frontend
-      
-
-      - name: Run Snyk to check for vulnerabilities in the Docker image
-        uses: snyk/actions/docker@master
-        with: 
-          image: ${{ secrets.DOCKER_USERNAME }}/sre:latest
-          args: --file=quiz-app/Dockerfile --severity-threshold=high
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        continue-on-error: true
 
       
-
-
-          
+      
         
