--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,4 +115,22 @@ jobs:
         continue-on-error: true
 
       
-  
+  frontend-image:
+    needs: frontend-security
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Build and push frontend image 
+      working-directory: ./frontend
+      run: |
+        docker build . -t ${{ secrets.DOCKER_USERNAME }}/frontend-sre:latest
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin 
+        docker push ${{ secrets.DOCKER_USERNAME }}/frontend-sre:latest
+
+
+    
