--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,11 +125,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }} --password-stdin
+
     - name: Build and push frontend image 
       working-directory: ./frontend
       run: |
         docker build . -t ${{ secrets.DOCKER_USERNAME }}/frontend-sre:latest
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin 
         docker push ${{ secrets.DOCKER_USERNAME }}/frontend-sre:latest
 
 
