--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,7 +129,7 @@ jobs:
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }} --password-stdin
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push frontend image 
       working-directory: ./frontend
