--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -216,4 +216,20 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       continue-on-error: true
+  
+  
+  k8s-manifest-scan:
+    needs: [backend-security, frontend-security]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run Snyk to check Kubernetes manifest file for issues
+        uses: snyk/actions/iac@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          file: kubernetes-manifest/
+          args: --severity-threshold=high
+    
+    
     
