--- a/k8s-manifests/frontend.yml
+++ b/k8s-manifests/frontend.yml
@@ -1,47 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
-  namespace: my-sre
   labels:
     app: frontend
+    app.kubernetes.io/instance: my-ingress-app
+  name: frontend
+  namespace: my-sre
 spec:
   replicas: 1
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 25%
-      maxSurge: 1
   selector:
     matchLabels:
-      app: frontend    
+      app: frontend
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: frontend
     spec:
       containers:
-      - name: frontend
-        image: mohd1995/sre:latest
-        env:
-        - name: API_BASE_URL
-          value: "http://moesportfolio.com"
-        ports:
-          containerPort: 8080
-
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend-service
-  namespace: my-sre
-spec:
-  selector:
-    app: frontend
-  ports:
-  - port: 8080
-    targetPort: 8080
-    protocol: TCP
-  type: ClusterIP
+        - env:
+            - name: API_BASE_URL
+              value: 'http://moesportfolio.com'
+          image: 'mohd1995/sre:latest'
+          name: frontend
+          ports:
+            containerPort: 8080
