--- a/k8s-manifests/ingress.yml
+++ b/k8s-manifests/ingress.yml
@@ -1,29 +1,31 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: mylb
-  namespace: my-sre
   annotations:
-    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    kubernetes.io/ingress.class: alb
+  labels:
+    app.kubernetes.io/instance: my-ingress-app
+  name: mylb
+  namespace: my-sre
 spec:
   rules:
-  - host: moesportfolio.com
-    http:
-      paths:
-      - path: /api
-        pathType: Prefix
-        backend:
-          service:
-            name: backend-service
-            port:
-              number: 5000
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: frontend-service
-            port:
-              number: 8080
+    - host: moesportfolio.com
+      http:
+        paths:
+          - backend:
+              service:
+                name: backend-service
+                port:
+                  number: 5000
+            path: /api
+            pathType: Prefix
+          - backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 8080
+            path: /
+            pathType: Prefix
