--- a/k8s-manifests/frontend.yml
+++ b/k8s-manifests/frontend.yml
@@ -28,5 +28,4 @@ spec:
           image: 'mohd1995/sre:latest'
           name: frontend
           ports:
-          -
-            containerPort: 8080
+          - containerPort: 8080
