--- a/helm-charts/templates/backend-deployment.yml
+++ b/helm-charts/templates/backend-deployment.yml
@@ -1,21 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: backend
+  namespace: {{ .Values.namespace }}
   labels:
     app: backend
     app.kubernetes.io/instance: my-ingress-app
-  name: backend
-  namespace: my-sre
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: backend
-  strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -23,16 +18,16 @@ spec:
     spec:
       containers:
         - name: backend
-          image: 'your-backend-image:latest'
+          image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
           ports:
-            - containerPort: 5000
+            - containerPort: {{ .Values.backend.containerPort }}
           env:
             - name: DATABASE_PATH
-              value: /data/portfolio_contacts.db
+              value: {{ .Values.backend.env.DATABASE_PATH }}
           volumeMounts:
-            - mountPath: /data/portfolio_contacts.db
+            - mountPath: {{ .Values.backend.env.DATABASE_PATH }}
               name: sqlite-storage
       volumes:
         - name: sqlite-storage
           persistentVolumeClaim:
-            claimName: my-pvc
+            claimName: {{ .Values.backend.pvcName }}
