--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -223,19 +223,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Set up Helm
-        uses: azure/setup-helm@v3
-      
-      - name: Render Helm templates
-        run: |
-          helm template flask-web ./helm-charts > rendered-manifests.yaml  
-      - name: Run Snyk to check Kubernetes manifest file for issues
+      - uses: actions/checkout@v4
+      - name: Run Synk to check kubernetes manifest file for issues
         uses: snyk/actions/iac@master
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SNYK_TOKEN: $ {{ secrets.SNYK_TOKEN }}
         with:
-          file: rendered-manifests.yaml
-          args: --severity-threshold=high
-    
-    
-    
+          file: helm-charts/templates
+          args: --severity-threshold=low
+
