--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
             -Dsonar.verbose=true
   
   frontend-security:
-    needs: backend-test
+    needs: frontend-test
     runs-on: ubuntu-latest
     defaults:
       run:
