--- a/helm-charts/templates/backend-deployment.yml
+++ b/helm-charts/templates/backend-deployment.yml
@@ -23,9 +23,9 @@ spec:
             - containerPort: {{ .Values.backend.containerPort }}
           env:
             - name: DATABASE_PATH
-              value: {{ .Values.backend.env.DATABASE_PATH }}
+              value: "{{ .Values.backend.env.DATABASE_PATH }}"
           volumeMounts:
-            - mountPath: {{ .Values.backend.env.DATABASE_PATH }}
+            - mountPath: "{{ .Values.backend.env.DATABASE_PATH }}"
               name: sqlite-storage
       volumes:
         - name: sqlite-storage
