--- a/k8s-manifests/frontend.yml
+++ b/k8s-manifests/frontend.yml
@@ -24,7 +24,7 @@ spec:
       containers:
         - env:
             - name: DATABASE_PATH
-              value: /data/portfolio_contacts.db
+              value: /data/
           image: 'mohd1995/frontend-sre:latest'
           name: frontend
           ports:
