--- a/k8s-manifests/backend.yml
+++ b/k8s-manifests/backend.yml
@@ -30,7 +30,7 @@ spec:
             - name: DATABASE_PATH
               value: /data/portfolio_contacts.db
           volumeMounts:
-            - mountPath: /data/portfolio_contacts.db
+            - mountPath: /data
               name: sqlite-storage
       volumes:
         - name: sqlite-storage
