--- a/sre-app.yml
+++ b/sre-app.yml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: 'https://github.com/mohd1995/AWS-CICD'
     targetRevision: HEAD
-    path: k8s
+    path: k8s-manifest
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: my-sre
