--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,12 +41,11 @@ jobs:
         with:
           python-version: '3.13.5'
       - name: Install dependencies and test
-      
         run: |
           pip install --upgrade pip 
           pip install -r requirements.txt
           flake8
-          #pytest
+          pytest
 
         env:
           FLASK_ENV: testing
