--- a/k8s-manifests/ingress.yml
+++ b/k8s-manifests/ingress.yml
@@ -6,6 +6,9 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     kubernetes.io/ingress.class: alb
+    kubernetes.io/backend-protocol: HTTP
+    kubernetes.io/health-check: /health
+
   labels:
     app.kubernetes.io/instance: my-ingress-app
   name: mylb
