--- a/k8s-manifests/ingress.yml
+++ b/k8s-manifests/ingress.yml
@@ -1,34 +1,33 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  name: mylb
+  namespace: my-sre
   annotations:
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     kubernetes.io/ingress.class: alb
-    kubernetes.io/backend-protocol: HTTP
-    kubernetes.io/health-check: /health
-
+    alb.ingress.kubernetes.io/backend-protocol: HTTP
+    alb.ingress.kubernetes.io/healthcheck-path: /health
   labels:
     app.kubernetes.io/instance: my-ingress-app
-  name: mylb
-  namespace: my-sre
 spec:
   rules:
     - host: moesportfolio.com
       http:
         paths:
-          - backend:
+          - path: /api
+            pathType: Prefix
+            backend:
               service:
                 name: backend-service
                 port:
                   number: 5000
-            path: /api
+          - path: /
             pathType: Prefix
-          - backend:
+            backend:
               service:
                 name: frontend-service
                 port:
                   number: 8080
-            path: /
-            pathType: Prefix
